test-app3/kube-objects/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 3
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: tomras/thes-node-simple
