test-app3/kube-objects/app2-service.yaml
# Use this for non-Istio testing to make services directly accessible
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 3000
