test-app3/kube-objects/app2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app2-vsvc
spec:
  hosts:
  - app2-service.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app2-service
        port:
          number: 3000
