test-app3/kube-objects/network-policy-test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-page-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app2
  ingress:
  - ports:
    - protocol: TCP
      port: 3000
    from:
    - podSelector:
        matchLabels:
          app: ip-app1
